Update domain/src/main/java/com/ryuqq/authhub/domain/auth/user/LastLoginAt.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>